force-app/main/default/objects/GGCustomSettings__c/GGCustomSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Custom settings used in code.</description>
    <label>GG Custom Settings</label>
</CustomObject>