force-app/main/default/objects/GGCustomSettings__c/fields/MaxEmailAttachmentSizeMB__c.field-meta.xml
<CustomField>
    <fullName>MaxEmailAttachmentSizeMB__c</fullName>
    <defaultValue>10</defaultValue>
    <description>Maximum size of attachments in MB when trip report is emailed.</description>
    <inlineHelpText>Maximum size of attachments in MB when trip report is emailed.</inlineHelpText>
    <label>MaxEmailAttachmentSizeMB</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>