force-app/main/default/objects/GGCustomSettings__c/fields/ProductCreationStatus__c.field-meta.xml
<CustomField>
    <fullName>ProductCreationStatus__c</fullName>
    <description>Specification status for product creation. Used in the spec &gt; product process in the Specification trigger.</description>
    <inlineHelpText>Specification status for product creation. Used in the spec &gt; product process in the Specification trigger.</inlineHelpText>
    <label>ProductCreationStatus</label>
    <length>255</length>
    <type>Text</type>
</CustomField>