force-app/main/default/objects/GGCustomSettings__c/fields/productSearchPageSize__c.field-meta.xml
<CustomField>
    <fullName>productSearchPageSize__c</fullName>
    <defaultValue>10</defaultValue>
    <description>Product search page size - used in Apex to return only a set number of records.</description>
    <inlineHelpText>Product search page size - used in Apex to return only a set number of records.</inlineHelpText>
    <label>Product Search Page Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>